# elf-loader

./: .gitignore  Cargo.toml  header_to_enum.py  input
src/: lib.rs
src/file/: elf_file.rs  mod.rs
src/header/: elf_type.rs  header.rs  ident.rs  machine.rs  mod.rs
src/header/prog_head/: flag.rs  mod.rs
src/header/prog_header/: flag.rs  mod.rs  prog_header_type.rs
src/header/sect_header/: flag.rs  mod.rs  sect_header_type.rs
src/loader/: loader.rs  mod.rs
src/util/: mod.rs
